# command-system

./: .editorconfig  .gitmodules  CMakeLists.txt  CMakePresets.json  COPYING.md  LICENSE.md  README.md  vcpkg.json
command-system/: CMakeLists.txt
command-system/include/: command_interface.h  command_registry.h  command_system_global.h
command-system/include/command/: command_interface.h  command_registry.h
command-system/include/contracts/: command_based_application_interface.h  command_interface.h
command-system/src/command/: command_registry.cpp
command-system/src/commands/: command_manager_commands.h
command-system/src/registry/: command_registry.cpp  command_registry.h
